--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,8 @@
   "description": "endpoint for the wizebot and riot api",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node-dev --transpile-only src/server.ts"
   },
   "author": "Thales",
   "license": "MIT",
@@ -12,8 +13,14 @@
     "nodemon": "^2.0.6"
   },
   "dependencies": {
+    "@types/cors": "^2.8.8",
+    "@types/express": "^4.17.8",
     "axios": "^0.21.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
+    "ts-node-dev": "^1.0.0",
+    "typescript": "^4.0.5"
   }
 }
