--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
   "author": "Thales",
   "license": "MIT",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
