Login/ Password Policy/ socket io

--- a/backend/.env.exemple
+++ b/backend/.env.exemple
@@ -1,3 +1,6 @@
-APP_RIOT_API_TOKEN=
-APP_SECRET_KEY=
+APP_RIOT_API_TOKEN="YOUR RIOT API TOKEN HERE"
+APP_SECRET_KEY="A SECRET KEY HERE"
 APP_ORIGIN=
+APP_ENCRYPT_MODE="Rabbit"
+APP_SALT_IDENTIFIER="YOUR SALT IDENTIFIER"
+APP_HASH_MODE="SHA256"
