--- a/backend/package.json
+++ b/backend/package.json
@@ -1,27 +1,43 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "endpoint for the wizebot and riot api",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev --transpile-only src/server.ts"
-  },
-  "author": "Thales",
-  "license": "MIT",
-  "devDependencies": {
-    "@types/axios": "^0.14.0",
-    "nodemon": "^2.0.6"
-  },
-  "dependencies": {
-    "@types/cors": "^2.8.8",
-    "@types/express": "^4.17.8",
-    "axios": "^0.21.0",
-    "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "express-async-errors": "^3.1.1",
-    "ts-node-dev": "^1.0.0",
-    "typescript": "^4.0.5"
-  }
+   "name": "backend",
+   "version": "1.0.0",
+   "description": "endpoint for the wizebot and riot api",
+   "main": "index.js",
+   "scripts": {
+      "test": "echo \"Error: no test specified\" && exit 1",
+      "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js",
+      "dev": "ts-node-dev --transpile-only src/server.ts",
+      "start": "ts-node src/index.ts"
+   },
+   "author": "Thales",
+   "license": "MIT",
+   "devDependencies": {
+      "@types/axios": "^0.14.0",
+      "@types/body-parser": "^1.19.0",
+      "@types/crypto-js": "^4.0.1",
+      "@types/node": "^8.0.29",
+      "@types/yup": "^0.29.9",
+      "nodemon": "^2.0.6",
+      "ts-node": "3.3.0"
+   },
+   "dependencies": {
+      "@types/cors": "^2.8.8",
+      "@types/express": "^4.17.8",
+      "@types/socket.io": "^2.1.11",
+      "axios": "^0.21.0",
+      "body-parser": "^1.19.0",
+      "cors": "^2.8.5",
+      "crypto-js": "^4.0.0",
+      "dotenv": "^8.2.0",
+      "express": "^4.17.1",
+      "express-async-errors": "^3.1.1",
+      "mysql": "^2.14.1",
+      "reflect-metadata": "^0.1.10",
+      "socket.io": "^3.0.3",
+      "sqlite3": "^5.0.0",
+      "ts-node-dev": "^1.0.0",
+      "typeorm": "0.2.29",
+      "typescript": "^4.0.5",
+      "yup": "^0.30.0"
+   }
 }
